Flash message readability fix

--- a/public/assets/styles/style.scss
+++ b/public/assets/styles/style.scss
@@ -51,7 +51,6 @@ body
 }
 
 
-
 /*content-parts*/
 
 .form-container{
@@ -81,7 +80,7 @@ body
 
 /*footer*/
 
-/*other parts*/
+/* other parts */
 .msg-wrapper
 {
     padding: 10px 0px;
@@ -89,10 +88,12 @@ body
     & .msg-warn
     {
         color: #ff9900;
+        text-shadow: 1px 1px 1px rgba(50, 50, 50, 1), 1px 1px 8px rgba(255, 153, 0, 0.75);
     }
     
     & .msg-error
     {
         color: #f00;
+        text-shadow: 1px 1px 1px rgba(50, 50, 50, 1), 1px 1px 8px rgba(255, 0, 0, 0.75);
     }
 }
